Fix mainNav collapse feature

--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,17 @@
   color: black;
 }
 
+.mainNavRender {
+  /* max-height: 0; */
+  transition: max-height 0.15s ease-out;
+  overflow: hidden;
+}
+
+.mainNavRender:hover {
+  max-height: 500px;
+  transition: max-height 0.25s ease-in;
+}
+
 /* Extra small devices */
 
 @media (min-width: 100px) {
